Bug 280351 don't assert when a relative path is passed to nsLocalFileUnix::InitWithPath r=dougt sr=darin